kong-DB/Backup_files/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: kong-service
 namespace: kong
spec:
 selector:
  app: kong
 ports:
  - protocol: TCP
    name: tcp-8000
    port: 80
    targetPort: 8000
  - protocol: TCP
    name: tcp-8443
    port: 8443
    targetPort: 8443
  - protocol: TCP
    name: tcp-8001
    port: 8001
    targetPort: 8001
  - protocol: TCP
    name: tcp-8444
    port: 8444
    targetPort: 8444
  - protocol: TCP
    name: tcp-8002
    port: 8002
    targetPort: 8002
  - protocol: TCP
    name: tcp-8445
    port: 8445
    targetPort: 8445
  - protocol: TCP
    name: tcp-8003
    port: 8003
    targetPort: 8003
  - protocol: TCP
    name: tcp-8004
    port: 8004
    targetPort: 8004
