kong-DB/Backup_files/kong-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: default-ingress
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: kong
spec: 
  rules: 
    - host: kong.com
      http: 
        paths: 
        - path: /
          pathType: Prefix
          backend:
             service:
              name: kong-service
              port: 
               number: 80
    - host: kong.admin.com
      http: 
        paths: 
        - path: /
          pathType: Prefix
          backend:
             service:
              name: kong-service
              port: 
               number: 8002
